tests/tests/snapshots/chapter_1__multi_digit.snap
---
source: tests/tests/chapter_1.rs
expression: tokens
---
TokenizedOutput {
    source: "int main(void) {\n    // test case w/ multi-digit constant\n    return 100;\n}",
    tokens: [
        Token {
            ttype: Ident,
            has_error: false,
            handle: 0,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 1,
        },
        Token {
            ttype: OpenParen,
            has_error: false,
            handle: 2,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 3,
        },
        Token {
            ttype: CloseParen,
            has_error: false,
            handle: 4,
        },
        Token {
            ttype: OpenBrace,
            has_error: false,
            handle: 5,
        },
        Token {
            ttype: FrontSlash,
            has_error: false,
            handle: 6,
        },
        Token {
            ttype: FrontSlash,
            has_error: false,
            handle: 7,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 8,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 9,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 10,
        },
        Token {
            ttype: FrontSlash,
            has_error: false,
            handle: 11,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 12,
        },
        Token {
            ttype: Hyphen,
            has_error: false,
            handle: 13,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 14,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 15,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 16,
        },
        Token {
            ttype: Constant,
            has_error: false,
            handle: 17,
        },
        Token {
            ttype: Semicolon,
            has_error: false,
            handle: 18,
        },
        Token {
            ttype: CloseBrace,
            has_error: false,
            handle: 19,
        },
    ],
    token_sources: [
        TokenSource {
            start: 0,
            end: 3,
            line: 0,
        },
        TokenSource {
            start: 4,
            end: 8,
            line: 0,
        },
        TokenSource {
            start: 8,
            end: 9,
            line: 0,
        },
        TokenSource {
            start: 9,
            end: 13,
            line: 0,
        },
        TokenSource {
            start: 13,
            end: 14,
            line: 0,
        },
        TokenSource {
            start: 15,
            end: 16,
            line: 0,
        },
        TokenSource {
            start: 21,
            end: 22,
            line: 1,
        },
        TokenSource {
            start: 22,
            end: 23,
            line: 1,
        },
        TokenSource {
            start: 24,
            end: 28,
            line: 1,
        },
        TokenSource {
            start: 29,
            end: 33,
            line: 1,
        },
        TokenSource {
            start: 34,
            end: 35,
            line: 1,
        },
        TokenSource {
            start: 35,
            end: 36,
            line: 1,
        },
        TokenSource {
            start: 37,
            end: 42,
            line: 1,
        },
        TokenSource {
            start: 42,
            end: 43,
            line: 1,
        },
        TokenSource {
            start: 43,
            end: 48,
            line: 1,
        },
        TokenSource {
            start: 49,
            end: 57,
            line: 1,
        },
        TokenSource {
            start: 62,
            end: 68,
            line: 2,
        },
        TokenSource {
            start: 69,
            end: 72,
            line: 2,
        },
        TokenSource {
            start: 72,
            end: 73,
            line: 2,
        },
        TokenSource {
            start: 74,
            end: 75,
            line: 3,
        },
    ],
    lines: [
        Line {
            start: 0,
            end: 17,
        },
        Line {
            start: 17,
            end: 58,
        },
        Line {
            start: 58,
            end: 74,
        },
        Line {
            start: 74,
            end: 75,
        },
    ],
}
