tests/tests/snapshots/chapter_1__return_0.snap
---
source: tests/tests/chapter_1.rs
expression: tokens
---
TokenizedOutput {
    source: "int main(void) {\n    return 0;\n}",
    tokens: [
        Token {
            ttype: Ident,
            has_error: false,
            handle: 0,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 1,
        },
        Token {
            ttype: OpenParen,
            has_error: false,
            handle: 2,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 3,
        },
        Token {
            ttype: CloseParen,
            has_error: false,
            handle: 4,
        },
        Token {
            ttype: OpenBrace,
            has_error: false,
            handle: 5,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 6,
        },
        Token {
            ttype: Constant,
            has_error: false,
            handle: 7,
        },
        Token {
            ttype: Semicolon,
            has_error: false,
            handle: 8,
        },
        Token {
            ttype: CloseBrace,
            has_error: false,
            handle: 9,
        },
    ],
    token_sources: [
        TokenSource {
            start: 0,
            end: 3,
            line: 0,
        },
        TokenSource {
            start: 4,
            end: 8,
            line: 0,
        },
        TokenSource {
            start: 8,
            end: 9,
            line: 0,
        },
        TokenSource {
            start: 9,
            end: 13,
            line: 0,
        },
        TokenSource {
            start: 13,
            end: 14,
            line: 0,
        },
        TokenSource {
            start: 15,
            end: 16,
            line: 0,
        },
        TokenSource {
            start: 21,
            end: 27,
            line: 1,
        },
        TokenSource {
            start: 28,
            end: 29,
            line: 1,
        },
        TokenSource {
            start: 29,
            end: 30,
            line: 1,
        },
        TokenSource {
            start: 31,
            end: 32,
            line: 2,
        },
    ],
    lines: [
        Line {
            start: 0,
            end: 17,
        },
        Line {
            start: 17,
            end: 31,
        },
        Line {
            start: 31,
            end: 32,
        },
    ],
}
