tests/tests/snapshots/chapter_1__spaces.snap
---
source: tests/tests/chapter_1.rs
expression: tokens
---
TokenizedOutput {
    source: "   int   main    (  void)  {   return  0 ; }",
    tokens: [
        Token {
            ttype: Ident,
            has_error: false,
            handle: 0,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 1,
        },
        Token {
            ttype: OpenParen,
            has_error: false,
            handle: 2,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 3,
        },
        Token {
            ttype: CloseParen,
            has_error: false,
            handle: 4,
        },
        Token {
            ttype: OpenBrace,
            has_error: false,
            handle: 5,
        },
        Token {
            ttype: Ident,
            has_error: false,
            handle: 6,
        },
        Token {
            ttype: Constant,
            has_error: false,
            handle: 7,
        },
        Token {
            ttype: Semicolon,
            has_error: false,
            handle: 8,
        },
        Token {
            ttype: CloseBrace,
            has_error: false,
            handle: 9,
        },
    ],
    token_sources: [
        TokenSource {
            start: 3,
            end: 6,
            line: 0,
        },
        TokenSource {
            start: 9,
            end: 13,
            line: 0,
        },
        TokenSource {
            start: 17,
            end: 18,
            line: 0,
        },
        TokenSource {
            start: 20,
            end: 24,
            line: 0,
        },
        TokenSource {
            start: 24,
            end: 25,
            line: 0,
        },
        TokenSource {
            start: 27,
            end: 28,
            line: 0,
        },
        TokenSource {
            start: 31,
            end: 37,
            line: 0,
        },
        TokenSource {
            start: 39,
            end: 40,
            line: 0,
        },
        TokenSource {
            start: 41,
            end: 42,
            line: 0,
        },
        TokenSource {
            start: 43,
            end: 44,
            line: 0,
        },
    ],
    lines: [
        Line {
            start: 0,
            end: 44,
        },
    ],
}
